<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:layout_marginHorizontal="4dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTaskText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:text="@string/task_example" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivEdit"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/edit_task"
                android:src="@drawable/ic_pencil"
                app:tint="@color/blue_edit" />

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:contentDescription="@string/delete_task"
                android:src="@drawable/ic_trash"
                app:tint="@color/red_delete" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>